--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
       <h2>Contact</h2>
-      <h3>Leave me a message</h3>
+      <!-- <h3>Leave me a message</h3>
       <form name="sentMessage" id="contactForm" novalidate>
         <div class="row">
           <div class="col-md-6">
@@ -227,7 +227,7 @@
         </div>
         <div id="success"></div>
         <button type="submit" class="btn btn-default">Send Message</button>
-      </form>
+      </form> -->
       <div class="social">
         <ul>
           <li><a href="https://www.facebook.com/ruben.tan"><i class="fa fa-facebook"></i></a></li>
