--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>RogueJS - A Javascript Oddity</title>
-<meta name="description" content="RogueJS is a blog dedicated to modern Javascript and things the author is interested in">
+<title>Ruben Tan - A Technologist's Corner</title>
+<meta name="description" content="Ruben Tan is a blog dedicated to technology and things I am interested in. And cats.">
 <meta name="author" content="Ruben Tan">
 
 <!-- Favicons
