--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <meta name="description" content="Ruben Tan is a blog dedicated to technology and things I am interested in. And cats.">
 <meta name="author" content="Ruben Tan">
 
-    <base href="http://replace-this-with-your-hugo-site.com/">
+    <base href="http://rubentan.com/">
     <title>Ruben Tan - a technologist&#39;s viewpoint</title>
-    <link rel="canonical" href="http://replace-this-with-your-hugo-site.com/">
-    <link href="http://replace-this-with-your-hugo-site.com/index.xml" rel="alternate" type="application/rss+xml" title="Ruben Tan - a technologist&#39;s viewpoint" />
+    <link rel="canonical" href="http://rubentan.com/">
+    <link href="http://rubentan.com/index.xml" rel="alternate" type="application/rss+xml" title="Ruben Tan - a technologist&#39;s viewpoint" />
 
     
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
