Fixed stupid shit

--- a/tech/test-post-please-ignore/index.html
+++ b/tech/test-post-please-ignore/index.html
@@ -40,6 +40,7 @@
 
 
 
+
 <div id="nav">
   <nav class="navbar navbar-custom">
     <div class="container">
@@ -80,6 +81,13 @@
 <p>See, once upon a time, there was a post called <em>Test Post Please Ignore</em> in reddit, and somehow got upvoted to the moon. No, that&rsquo;d be an understatement. It got so many upvotes that it went straight to the sun, punched a hole through it, tore open a wormhole, and ended up in a parallel dimension stuck in the buttocks of an unfortunate elder god. Our universe is fucked because of this, but hey, it&rsquo;ll be some time before the elder god arrives, but when it does, just remember:</p>
 
 <p>It was reddit&rsquo;s fault.</p>
+        </div>
+        <div class="text-center center">
+          <hr>
+          <p>
+            Article [<a href="http://rubentan.com/types/tech">Tech</a>]
+            tagged as [<a href="http://rubentan.com/tags/reddit">Reddit</a>][<a href="http://rubentan.com/tags/history">History</a>]
+          </p>
         </div>
       </div>
     </div>
