Fixed summary template

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
           
                       <li class="timeline-inverted">
             <div class="timeline-image">
-              <h4>23 Dec 2016</h4>
+              <h4>23<br>Dec 2016</h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Post</h4>
+                <h4> Tech </h4>
                 <h4 class="subheading"><a href="http://rubentan.com/tech/test-post-please-ignore/">Test Post Please Ignore</a></h4>
               </div>
               <div class="timeline-body">
