Removed types and added a new article

--- a/gaming/obsidian-world-intro/index.html
+++ b/gaming/obsidian-world-intro/index.html
@@ -10,7 +10,7 @@
 
     <base href="http://rubentan.com/">
     <title>Ruben Tan - a technologist&#39;s viewpoint</title>
-    <link rel="canonical" href="http://rubentan.com/tech/test-post-please-ignore/">
+    <link rel="canonical" href="http://rubentan.com/gaming/obsidian-world-intro/">
     <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - a technologist&#39;s viewpoint" />
 
     
@@ -68,13 +68,13 @@
 <div id="single">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>Test Post Please Ignore</h2>
-      <div class="col-md-12 text-center single-date">Posted on monday, 23 Dec 2016</div>
+      <h2>Obsidian World Intro</h2>
+      <div class="col-md-12 text-center single-date">Posted on monday, 24 Dec 2016</div>
     </div>
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div class="content-text">
-           <p>What better way to start my blog by writing <em>test post please ignore</em>? Alright, strap in kids, time for a little reddit history.</p>
+           <p>It&rsquo;s been a while since I talked about the RPG (the tabletop kind) that I&rsquo;m working on, and much have changed since then. Time for a re-introduction!</p>
 
 <p></p>
 
@@ -85,8 +85,8 @@
         <div class="text-center center">
           <hr>
           <p>
-            Article series  [<a href="http://rubentan.com/series/tech-of-my-life">Tech Of My Life</a>]
-            tagged  [<a href="http://rubentan.com/tags/reddit">Reddit</a>] [<a href="http://rubentan.com/tags/history">History</a>]
+            Article series  [<a href="http://rubentan.com/series/obsidian-world">Obsidian World</a>]
+            tagged  [<a href="http://rubentan.com/tags/design">Design</a>] [<a href="http://rubentan.com/tags/rpg">RPG</a>] [<a href="http://rubentan.com/tags/tabletop">Tabletop</a>] [<a href="http://rubentan.com/tags/worldbuilding">Worldbuilding</a>]
           </p>
         </div>
       </div>
