--- a/index.html
+++ b/index.html
@@ -96,11 +96,28 @@
           
                       <li class="timeline-inverted">
             <div class="timeline-image">
+              <h4>24<br>Dec 2016</h4>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>gaming</h4>
+                <h4 class="subheading"><a href="http://rubentan.com/gaming/obsidian-world-intro/">Obsidian World Intro</a></h4>
+              </div>
+              <div class="timeline-body">
+                <p><p>It&rsquo;s been a while since I talked about the RPG (the tabletop kind) that I&rsquo;m working on, and much have changed since then. Time for a re-introduction!</p>
+
+<p></p></p>
+              </div>
+            </div>
+          </li>
+          
+                      <li class="timeline-inverted">
+            <div class="timeline-image">
               <h4>23<br>Dec 2016</h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4> Tech </h4>
+                <h4>tech</h4>
                 <h4 class="subheading"><a href="http://rubentan.com/tech/test-post-please-ignore/">Test Post Please Ignore</a></h4>
               </div>
               <div class="timeline-body">
