Updated obsidian world article

--- a/gaming/obsidian-world-intro/index.html
+++ b/gaming/obsidian-world-intro/index.html
@@ -78,9 +78,42 @@
 
 <p></p>
 
-<p>See, once upon a time, there was a post called <em>Test Post Please Ignore</em> in reddit, and somehow got upvoted to the moon. No, that&rsquo;d be an understatement. It got so many upvotes that it went straight to the sun, punched a hole through it, tore open a wormhole, and ended up in a parallel dimension stuck in the buttocks of an unfortunate elder god. Our universe is fucked because of this, but hey, it&rsquo;ll be some time before the elder god arrives, but when it does, just remember:</p>
+<blockquote>
+<p>Obsidian World is a standalone pen-and-paper roleplaying game (RPG) set in the sunless world of Itheas where you struggle to inspire a despondent people to find hope in the gloom.</p>
+</blockquote>
 
-<p>It was reddit&rsquo;s fault.</p>
+<p>There, the elevator pitch. Let&rsquo;s dive a little deeper into this. First of all, everything about the game revolves around one simple fact: <strong>there is no sun</strong>.</p>
+
+<p><em>Obsidian World</em> is primarily a worldbuilding exercise where I start with a simple premise (there is no sun) and work my way out from there. How did the sun vanish? What happens when you lose the sun? How do people survive in the new world? How would society look like?</p>
+
+<h3 id="no-creation-myth">No creation myth</h3>
+
+<p>One thing that I absolutely hated with worldbuilding is the idea of a creation myth. In the past, whever I sat down and built worlds, creation myth was always the starting point. But after many years of half baked ideas and unfinished worlds I figured there may be a better way of doing this.</p>
+
+<p>So I asked myself: what&rsquo;s the point of a creation myth? Do the gods that made the world (if they are indeed gods in the classical sense) matter in the current society? Does it make any difference if I swapped out one god for another, or changed the method of genesis?</p>
+
+<p>And most important of all, will my players, who might not have any investment into the setting&rsquo;s history itself, care?</p>
+
+<p>Unfortunately from my playtestings, nope, most of them can&rsquo;t even remember NPC names, let alone remember the pantheon of gods and their domains. Time for a better way to hook players into the setting other than dumping a history book on them.</p>
+
+<h3 id="a-world-of-mysteries">A world of mysteries</h3>
+
+<p>The driving factor behind the creation if <strong>Itheas</strong> is that it must be a world that intrigues the curious cats. I want my players to be inspired by the lore, to be driven to want to know more about what happened. And the most effective tool to achieve that goal is through <em>mysteries</em>.</p>
+
+<p>Most people are naturally curious when given the right hooks. I don&rsquo;t want my players to <em>know</em> what the world is, and how it came about: I want them to form their own theories. To do this, I struck off the entire history I wrote for <strong>Itheas</strong> and wrote a timeline around four epochs instead:</p>
+
+<ul>
+<li><strong>The theft of the sun</strong> - Long ago gods descended upon Itheas and elevated the common men into a powerful empire, and then the gods left and took the sun with them</li>
+<li><strong>The cost of sorcery</strong> - The people turned to sorcery and tried to transmute one of the twin moons to replace the stolen sun, but failed horribly, creating the Breach</li>
+<li><strong>The subterranean exodus</strong> - Out comes an army of horrors called the Ashen Horde, forcing humanity underground</li>
+<li><strong>The return to surface</strong> - Decades later humanity reconquered the surface with the Golden Host and built seven cities</li>
+</ul>
+
+<p>I had to refrain from fleshing out these four epochs, because I think I have a better way. Playing a ton of <a href="http://www.failbettergames.com/sunless/">Sunless Sea</a> (<em>note: Obsidian World was not inspired by Sunless Sea. While the premise of these two settings are similar, the details are vastly different</em>) taught me a lot of things, and one of them is &ldquo;show, don&rsquo;t tell&rdquo;.</p>
+
+<h3 id="show-don-t-tell">Show, don&rsquo;t tell</h3>
+
+<p>Instead of writing down pages after pages of (<em>boring</em>) history, I decided to utilize <em>implications</em> peppered into both the setting and game rules instead.</p>
         </div>
         <div class="text-center center">
           <hr>
