Updated obsidian world article

--- a/gaming/obsidian-world-intro/index.html
+++ b/gaming/obsidian-world-intro/index.html
@@ -5,13 +5,13 @@
 
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Ruben Tan is a blog dedicated to technology and things I am interested in. And cats.">
+<meta name="description" content="">
 <meta name="author" content="Ruben Tan">
 
     <base href="http://rubentan.com/">
-    <title>Ruben Tan - a technologist&#39;s viewpoint</title>
+    <title>Ruben Tan - my corner of the internet</title>
     <link rel="canonical" href="http://rubentan.com/gaming/obsidian-world-intro/">
-    <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - a technologist&#39;s viewpoint" />
+    <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - my corner of the internet" />
 
     
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
@@ -104,16 +104,64 @@
 
 <ul>
 <li><strong>The theft of the sun</strong> - Long ago gods descended upon Itheas and elevated the common men into a powerful empire, and then the gods left and took the sun with them</li>
-<li><strong>The cost of sorcery</strong> - The people turned to sorcery and tried to transmute one of the twin moons to replace the stolen sun, but failed horribly, creating the Breach</li>
+<li><strong>The cost of sorcery</strong> - The people turned to sorcery to replace the stolen sun, but failed horribly, creating the Breach</li>
 <li><strong>The subterranean exodus</strong> - Out comes an army of horrors called the Ashen Horde, forcing humanity underground</li>
 <li><strong>The return to surface</strong> - Decades later humanity reconquered the surface with the Golden Host and built seven cities</li>
 </ul>
 
-<p>I had to refrain from fleshing out these four epochs, because I think I have a better way. Playing a ton of <a href="http://www.failbettergames.com/sunless/">Sunless Sea</a> (<em>note: Obsidian World was not inspired by Sunless Sea. While the premise of these two settings are similar, the details are vastly different</em>) taught me a lot of things, and one of them is &ldquo;show, don&rsquo;t tell&rdquo;.</p>
+<p>By structuring the four epochs these way and then refraining from writing tons of history about each epoch, I left enough blank lines to be filled up by the players&rsquo; own imaginations. For example:</p>
+
+<ul>
+<li>Why did the gods left?</li>
+<li>Did the gods took the sun with malicious intents?</li>
+<li>How did the people know about sorcery back then?</li>
+<li>What exactly did they do to fuck up and create the Breach?</li>
+<li>Where did humanity lived when driven underground?</li>
+<li>What did they eat and how did they survive underground?</li>
+<li>What is the Golden Host and how did it formed?</li>
+<li>How did the people reclaimed the surface?</li>
+<li>How and why did the seven cities get built?</li>
+</ul>
+
+<p>Playing a ton of <a href="http://www.failbettergames.com/sunless/">Sunless Sea</a> (<em>note: Obsidian World was not inspired by Sunless Sea. While the premise of these two settings are similar, the details are vastly different</em>) taught me a lot of things, and one of them is &ldquo;show, don&rsquo;t tell&rdquo;.</p>
 
 <h3 id="show-don-t-tell">Show, don&rsquo;t tell</h3>
 
-<p>Instead of writing down pages after pages of (<em>boring</em>) history, I decided to utilize <em>implications</em> peppered into both the setting and game rules instead.</p>
+<p>Here&rsquo;s an example of that philosophy in action. In a city called Crasoa - which is basically a greco-roman inspired city - life revolves around an ancient coliseum where a glowing orb hovers over it, providing light and fire to all within the gigantic building.</p>
+
+<p>Instead of writing down how Crasoa came to be, I created four factions each claiming to be the true stewards of the orb, with their own theories about the true nature of the glowing ball. Additionally, the orb is related to the Breach, and the sorcerers who created it.</p>
+
+<p>Here&rsquo;s a quick overview:</p>
+
+<blockquote>
+<p><strong>The Dawn Guards</strong> - the militant outfit claims the Orb to be a shard of the sun, captured when their ancestors went to war with the gods. Now, they man the seven obelisks surrounding the Orb, defending it at all cost from those who seek to steal or damage it.</p>
+</blockquote>
+
+<p>Alright with the Dawn Guards, we have an implication that there was a war between humans and gods <em>before</em> the sun was stolen, and a glimpse of what the Orb is.</p>
+
+<blockquote>
+<p><strong>The Scorched Ones</strong> - the scorched ones are mystics who claimed to be direct descendants of a band of sorcerers who gave their lives to sealing the vanguard of the Ashen Horde in the Orb to buy time for humanity to flee into the underworld.</p>
+</blockquote>
+
+<p>With the Scorched Ones, the Orb takes a more sinister turn. It&rsquo;s the prison of the horrors that drove humanity deep underground. What happens when the Orb is broken then?</p>
+
+<blockquote>
+<p><strong>The Crucible Priests</strong> - the masonry guild who restored the ancient coliseum and built Crasoa around it claims the Orb to be part of a bigger machine buried underneath the coliseum, forged in the times of the old empire to harness the fires of the world&rsquo;s belly for the ultimate creation: life itself.</p>
+</blockquote>
+
+<p>Awww shiet, now we have a new implication, that there&rsquo;s something underneath the coliseum that nobody knows about, and that the people of the old empire tried to create life. Could this be the reason why the gods left?</p>
+
+<blockquote>
+<p><strong>The Blood Dancers</strong> - the band of gladiators notorious for their flamboyant savagery believes the Orb to be alive and thirsts for bloody spectacles. They slaughter their opponents in gruesome manners to appease the Orb, and when defeated, often tear their guts out in a final flourish for the Orb.</p>
+</blockquote>
+
+<p>What is a world without blood sacrifices and savagery? The Blood Dancers imply that the Orb is a sentient being, with a penchant for the macabre. What kind of stories can we tell with this?</p>
+
+<h3 id="plot-hooks-come-from-mysteries">Plot hooks come from mysteries</h3>
+
+<p>I found that developing a strict canon is not a good idea when building worlds meant to be altered, mutated and chopped up by your players. Rather than putting in long pages of history, I sought to give plot hooks and conflicts instead, with minimal but intriguing ties to the four epochs established as part of the canonical history of the world.</p>
+
+<p>That is how I&rsquo;ll write <em>Obsidian World</em> - filled with mysteries and blanks, waiting for you to fill them up with your own ideas and creativity.</p>
         </div>
         <div class="text-center center">
           <hr>
