--- a/tech/test-post-please-ignore/index.html
+++ b/tech/test-post-please-ignore/index.html
@@ -5,13 +5,13 @@
 
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Ruben Tan is a blog dedicated to technology and things I am interested in. And cats.">
+<meta name="description" content="">
 <meta name="author" content="Ruben Tan">
 
     <base href="http://rubentan.com/">
-    <title>Ruben Tan - a technologist&#39;s viewpoint</title>
+    <title>Ruben Tan - my corner of the internet</title>
     <link rel="canonical" href="http://rubentan.com/tech/test-post-please-ignore/">
-    <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - a technologist&#39;s viewpoint" />
+    <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - my corner of the internet" />
 
     
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
