--- a/gaming/obsidian-world-intro/index.html
+++ b/gaming/obsidian-world-intro/index.html
@@ -98,7 +98,7 @@
 
 <h3 id="a-world-of-mysteries">A world of mysteries</h3>
 
-<p>The driving factor behind the creation if <strong>Itheas</strong> is that it must be a world that intrigues the curious cats. I want my players to be inspired by the lore, to be driven to want to know more about what happened. And the most effective tool to achieve that goal is through <em>mysteries</em>.</p>
+<p>The driving factor behind the creation of <strong>Itheas</strong> is that it must be a world that intrigues the curious cats. I want my players to be inspired by the lore, to be driven to want to know more about what happened. And the most effective tool to achieve that goal is through <em>mysteries</em>.</p>
 
 <p>Most people are naturally curious when given the right hooks. I don&rsquo;t want my players to <em>know</em> what the world is, and how it came about: I want them to form their own theories. To do this, I struck off the entire history I wrote for <strong>Itheas</strong> and wrote a timeline around four epochs instead:</p>
 
