--- a/gaming/obsidian-world-intro/index.html
+++ b/gaming/obsidian-world-intro/index.html
@@ -109,11 +109,11 @@
 <li><strong>The return to surface</strong> - Decades later humanity reconquered the surface with the Golden Host and built seven cities</li>
 </ul>
 
-<p>By structuring the four epochs these way and then refraining from writing tons of history about each epoch, I left enough blank lines to be filled up by the players&rsquo; own imaginations. For example:</p>
+<p>By structuring the four epochs this way and refraining from writing tons of history about each, I left enough blanks for my players to fill with their own imagination. For example:</p>
 
 <ul>
-<li>Why did the gods left?</li>
-<li>Did the gods took the sun with malicious intents?</li>
+<li>Why did the gods leave?</li>
+<li>Did the gods steal the sun with malicious intent?</li>
 <li>How did the people know about sorcery back then?</li>
 <li>What exactly did they do to fuck up and create the Breach?</li>
 <li>Where did humanity lived when driven underground?</li>
