Added dice article

--- a/index.html
+++ b/index.html
@@ -96,6 +96,23 @@
           
                       <li class="timeline-inverted">
             <div class="timeline-image">
+              <h4>25<br>Dec 2016</h4>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>gaming</h4>
+                <h4 class="subheading"><a href="http://rubentan.com/gaming/lets-talk-about-dice/">Let&#39;s talk about dice</a></h4>
+              </div>
+              <div class="timeline-body">
+                <p><p>Merry christmas! Today I&rsquo;m going to talk about dice, and specific what led to the inception of the current dice mechanics.</p>
+
+<p></p></p>
+              </div>
+            </div>
+          </li>
+          
+                      <li class="timeline-inverted">
+            <div class="timeline-image">
               <h4>24<br>Dec 2016</h4>
             </div>
             <div class="timeline-panel">
