--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
-        <a class="navbar-brand page-scroll" href="#page-top">Ruben "RogueJS" Tan</a> </div>
+        <a class="navbar-brand page-scroll" href="#page-top">Ruben Tan</a> </div>
       
       
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
