Fixed page title

--- a/gaming/lets-talk-about-dice/index.html
+++ b/gaming/lets-talk-about-dice/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Ruben Tan">
 
     <base href="http://rubentan.com/">
-    <title>Ruben Tan - my corner of the internet</title>
+    <title>Let&#39;s talk about dice</title>
     <link rel="canonical" href="http://rubentan.com/gaming/lets-talk-about-dice/">
     <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - my corner of the internet" />
 
