--- a/gaming/obsidian-world-intro/index.html
+++ b/gaming/obsidian-world-intro/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Ruben Tan">
 
     <base href="http://rubentan.com/">
-    <title>Ruben Tan - my corner of the internet</title>
+    <title>Obsidian World Intro</title>
     <link rel="canonical" href="http://rubentan.com/gaming/obsidian-world-intro/">
     <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - my corner of the internet" />
 
