--- a/tech/test-post-please-ignore/index.html
+++ b/tech/test-post-please-ignore/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Ruben Tan">
 
     <base href="http://rubentan.com/">
-    <title>Ruben Tan - my corner of the internet</title>
+    <title>Test Post Please Ignore</title>
     <link rel="canonical" href="http://rubentan.com/tech/test-post-please-ignore/">
     <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - my corner of the internet" />
 
