Added one more article and fixed dice rules

--- a/gaming/lets-talk-about-dice/index.html
+++ b/gaming/lets-talk-about-dice/index.html
@@ -122,7 +122,7 @@
 <p>From my playtests, players will always choose to roll more dice. The more dice you get to roll, the better you feel about getting the results you want. Since <em>Obsidian World</em> is not a game about luck and fortune, and the players are supposed to be playing heroes who <em>knows what they are doing most of the time</em>, I decided to use a dice pool (pick highest) method to ensure that success is more common than failure.</p>
 
 <blockquote>
-<p>In <em>Obsidian World</em>, you roll from 1d6 to 4d6, and pick the highest score. The number of dice is determined by your hero&rsquo;s <strong>method</strong> (fast, hard, slow, soft), which describes <strong>how</strong> you do things rather than base it off skills or attributes like most RPGs do.</p>
+<p>In <em>Obsidian World</em>, you always roll 3d6, and pick either the lowest/middle/highest based on the situation. The number of dice is determined by your hero&rsquo;s <strong>method</strong> (fast, hard, slow, soft), which describes <strong>how</strong> you do things rather than base it off skills or attributes like most RPGs do.</p>
 </blockquote>
 
 <h3 id="number-of-possible-outcomes">Number of possible outcomes</h3>
@@ -138,7 +138,7 @@
 <p>For <em>Obsidian World</em>, I decided to follow in the footsteps of Dungeon World and Apocalypse World. Dice rolls yield <em>miss</em> (you don&rsquo;t get what you want), <em>hit</em> (you get what you want, at a cost), or <em>crit</em> (you get what you want, and more). Since <em>hits</em> are the most common outcome, it&rsquo;s possible for me in actual play as a GM to push my players on a heroic journey: every time you want to do something significant, you must think about what you must sacrifice to get there.</p>
 
 <blockquote>
-<p>In <em>Obsidian World</em>, after picking the highest score, add it to your trait (-1 to +2) and intepret the result. On a 1~3, it&rsquo;s a miss - tough luck! On a 4~6, it&rsquo;s a hit - success, but you must give up something you care about, or reduce the effect of your success. On a 7+, it&rsquo;s a crit - you succeed with style!</p>
+<p>In <em>Obsidian World</em>, add your die score to your trait (-1 to +2) and intepret the result. On a 1~3, it&rsquo;s a miss - tough luck! On a 4~6, it&rsquo;s a hit - success, but you must give up something you care about, or reduce the effect of your success. On a 7+, it&rsquo;s a crit - you succeed with style!</p>
 </blockquote>
 
 <h3 id="modifying-dice-and-dice-scores">Modifying dice and dice scores</h3>
@@ -164,7 +164,7 @@
 <p>The bottom line is, the simpler the basic dice roll, the more you can add on top of it without killing your game&rsquo;s usability outright.</p>
 
 <blockquote>
-<p>In <em>Obsidian World</em>, dice modifiers come in two ways: upgrade and downgrades. On an upgrade, you changes a miss to a hit, or a hit to a crit. On a downgrade, you change a crit to a hit, or a hit to a miss.</p>
+<p>In <em>Obsidian World</em>, there are 3 ways to modify your dice roll: (1) spend a special resource to roll 4d6 and discard the lowest score, (2) upgrade a miss to a hit, and (3) upgrade a hit to a crit.</p>
 </blockquote>
 
 <h3 id="range-of-difficulty-targets">Range of difficulty targets</h3>
@@ -178,7 +178,7 @@
 <p>In cases like these, having the ability to adjust difficulty targets is a godsend for GMs. It&rsquo;s easier for me to craft a tighter narrative that way.</p>
 
 <blockquote>
-<p>In <em>Obsidian World</em>, difficulty comes in 4 steps: 0, -1d, -2d, or -3d. After rolling your dice, remove a number of results equal to the difficulty, starting from the highest to the lowest. Stop when you have removed the stated number of dice, or if you are left with just 1 die score.</p>
+<p>In <em>Obsidian World</em>, difficulty ranges from 1 to 4. If your method rating is less than the difficulty, pick the lowest of 3d6 as your score. If your method rating is equal to the difficulty, pick the middle of 3d6 as your score. If your method rating is higher than the difficulty, pick the highest of 3d6 as your score.</p>
 </blockquote>
 
 <h3 id="wrapping-it-up">Wrapping it up</h3>
