--- a/index.html
+++ b/index.html
@@ -96,6 +96,23 @@
           
                       <li class="timeline-inverted">
             <div class="timeline-image">
+              <h4>27<br>Dec 2016</h4>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>gaming</h4>
+                <h4 class="subheading"><a href="http://rubentan.com/gaming/probability-check/">Probability check</a></h4>
+              </div>
+              <div class="timeline-body">
+                <p><p>Following the previous post about dice systems, in this post I&rsquo;m going to outline the dice system used by <em>Obsidian World</em> and the probability for every outcome.</p>
+
+<p></p></p>
+              </div>
+            </div>
+          </li>
+          
+                      <li class="timeline-inverted">
+            <div class="timeline-image">
               <h4>25<br>Dec 2016</h4>
             </div>
             <div class="timeline-panel">
