Added identity placeholder article

--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
           
                       <li class="timeline-inverted">
             <div class="timeline-image">
+              <h4>29<br>Dec 2016</h4>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>tech</h4>
+                <h4 class="subheading"><a href="http://rubentan.com/tech/journey-into-identity/">Journey into identity</a></h4>
+              </div>
+              <div class="timeline-body">
+                <p>Just a placeholder for a series of article I&rsquo;m going to write about identity, and how it will affect the digital world.
+Stay tuned!</p>
+              </div>
+            </div>
+          </li>
+          
+                      <li class="timeline-inverted">
+            <div class="timeline-image">
               <h4>27<br>Dec 2016</h4>
             </div>
             <div class="timeline-panel">
