Added article about dice

--- a/index.html
+++ b/index.html
@@ -96,6 +96,23 @@
           
                       <li class="timeline-inverted">
             <div class="timeline-image">
+              <h4>11<br>Jan 2017</h4>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>gaming</h4>
+                <h4 class="subheading"><a href="http://rubentan.com/gaming/tidying-up-dice-mechanics/">Tidying up dice mechanics</a></h4>
+              </div>
+              <div class="timeline-body">
+                <p><p>After playtesting the <a href="/gaming/probability-check">last dice system</a>, several problems cropped up, which led to the new dice mechanic which I am <em>super</em> happy with.</p>
+
+<p></p></p>
+              </div>
+            </div>
+          </li>
+          
+                      <li class="timeline-inverted">
+            <div class="timeline-image">
               <h4>29<br>Dec 2016</h4>
             </div>
             <div class="timeline-panel">
@@ -105,7 +122,8 @@
               </div>
               <div class="timeline-body">
                 <p>Just a placeholder for a series of article I&rsquo;m going to write about identity, and how it will affect the digital world.
-Stay tuned!</p>
+Identity is an often misunderstood concept in the modern world. Most people confuse identity with authorisation and authentication, and when you do this it becomes exponentially hard to explain what an identity solution is without getting questioned on irrelevant parts.
+What is identity? The easiest way to understand the term identity is to acknowledge that it is a category rather than a noun.</p>
               </div>
             </div>
           </li>
