--- a/gaming/tidying-up-dice-mechanics/index.html
+++ b/gaming/tidying-up-dice-mechanics/index.html
@@ -9,8 +9,8 @@
 <meta name="author" content="Ruben Tan">
 
     <base href="http://rubentan.com/">
-    <title>Journey into identity</title>
-    <link rel="canonical" href="http://rubentan.com/tech/journey-into-identity/">
+    <title>Tidying up dice mechanics</title>
+    <link rel="canonical" href="http://rubentan.com/gaming/tidying-up-dice-mechanics/">
     <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - my corner of the internet" />
 
     
@@ -68,38 +68,56 @@
 <div id="single">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>Journey into identity</h2>
-      <div class="col-md-12 text-center single-date">Posted on monday, 29 Dec 2016</div>
+      <h2>Tidying up dice mechanics</h2>
+      <div class="col-md-12 text-center single-date">Posted on monday, 11 Jan 2017</div>
     </div>
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div class="content-text">
-           
+           <p>After playtesting the <a href="/gaming/probability-check">last dice system</a>, several problems cropped up, which led to the new dice mechanic which I am <em>super</em> happy with.</p>
 
-<p>Just a placeholder for a series of article I&rsquo;m going to write about identity, and how it will affect the digital world.</p>
+<p></p>
 
-<!-- more --> 
+<p>In the previous post, I evaluated the probability of a 3d6 pick high/middle/low system, and I thought that would be the perfect dice rules for <em>Obsidian World</em>. I was wrong. Playtesting proved me wrong.</p>
 
-<p>Identity is an often misunderstood concept in the modern world. Most people confuse identity with authorisation and authentication, and when you do this it becomes exponentially hard to explain what an identity solution is without getting questioned on irrelevant parts.</p>
+<p>It doesn&rsquo;t feel right, and picking one die from three feels a bit underwhelming. My players didn&rsquo;t comment much on the dice, but they did took some time to figure out which die to choose, given the situation and assorted modifiers.</p>
 
-<h3 id="what-is-identity">What is identity?</h3>
+<p>In short, even with 3d6 pick one, if feels a bit clunky in play. The other thing is, it doesn&rsquo;t actually <em>do</em> anything, other than giving 3 outcomes (miss, hit, crit). There&rsquo;s no tactical decision to be made on the dice, and there&rsquo;s not a lot of room nor depth to expand it through special rules like abilities and such.</p>
 
-<p>The easiest way to understand the term <strong>identity</strong> is to acknowledge that it is a category rather than a noun. There are many kinds of identity, some more important than others, and many of them have their own uses in different sectors.</p>
+<h3 id="a-new-start">A New Start</h3>
 
-<p>Let&rsquo;s break down identity to the following concepts:</p>
+<p>So I ditched it and went back to the drawing board. I knew I wanted 3d6, so that has to stay. I knew I wanted roll and pick, so that had to stay. I knew I wanted degrees of success, so that has to stay. How to turn the dice system into something with a little bit more nuance than the current system?</p>
 
-<ul>
-<li>Legal Identity</li>
-<li>Social Identity</li>
-<li>Personal Identity</li>
-</ul>
+<p>Epiphany.</p>
 
+<p>I decided to do 2d6 instead. Here&rsquo;s how a basic dice roll works:</p>
+
+<ol>
+<li>Determine position (dominant, balanced, or desperate)</li>
+<li>Roll 3d6</li>
+<li>Dominant: add highest two + trait, success on 7+, lowest die is effect</li>
+<li>Balanced: add highest + lowest + trait, success on 7+, middle die is effect</li>
+<li>Desperate: add lowest two + trait, success on 7+, highest die is effect</li>
+<li>On success, check effect die score: 1-3 graze, 4-5 hit, 6 crit</li>
+</ol>
+
+<p>Here&rsquo;s the fun part about this system: probability wise, if you are in a dominant position, unless you rolled really well, your effect is going to suck, since you&rsquo;re picking the lowest die as your effect. Conversely, if you are in a desperate position, should you succeed on the sum of two lowest die, it is easier for you to crit on your effect die, since it is the highest die of the three!</p>
+
+<p>So this means, the dice system adds a bit more tactical depth to your fictional positioning during play: when you get put in a desperate position, all is not lost! You can still win with a lucky hit. This means you actually get <em>stronger</em> when you are ground to dust.</p>
+
+<p>I am happy with this new mechanic because it portrays the themes of <em>Obsidian World</em> really well, where the game is supposed to be about sacrifice and hope in the eternal gloom.</p>
+
+<h3 id="moving-on">Moving On</h3>
+
+<p>I&rsquo;m honestly done with the dice system. I like it. 2d6 and success on a 7+ gives me enough room to apply modifiers to it, and effect die working the way it does fits the design goals I have for this game.</p>
+
+<p>I can&rsquo;t wait to start fleshing out the other parts of the system. A slight preview: the next topic about the game system will be something I call <em>keys</em>. Stay tuned!</p>
         </div>
         <div class="text-center center">
           <hr>
           <p>
-            Article series  [<a href="http://rubentan.com/series/tech-of-my-life">Tech Of My Life</a>]
-            tagged  [<a href="http://rubentan.com/tags/cryptography">Cryptography</a>] [<a href="http://rubentan.com/tags/identity">Identity</a>]
+            Article series  [<a href="http://rubentan.com/series/obsidian-world">Obsidian World</a>]
+            tagged  [<a href="http://rubentan.com/tags/design">Design</a>] [<a href="http://rubentan.com/tags/rpg">RPG</a>] [<a href="http://rubentan.com/tags/tabletop">Tabletop</a>] [<a href="http://rubentan.com/tags/dice">Dice</a>]
           </p>
         </div>
       </div>
