Fixed identity article

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                 <h4 class="subheading"><a href="http://rubentan.com/tech/journey-into-identity/">Journey into identity</a></h4>
               </div>
               <div class="timeline-body">
-                <p>Just a placeholder for a series of article I&rsquo;m going to write about identity, and how it will affect the digital world.
-Identity is an often misunderstood concept in the modern world. Most people confuse identity with authorisation and authentication, and when you do this it becomes exponentially hard to explain what an identity solution is without getting questioned on irrelevant parts.
-What is identity? The easiest way to understand the term identity is to acknowledge that it is a category rather than a noun.</p>
+                <p><p>Just a placeholder for a series of article I&rsquo;m going to write about identity, and how it will affect the digital world.</p>
+
+<p></p></p>
               </div>
             </div>
           </li>
